[package]
name = "easyamqp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
tokio = { version = "1.29.1", features = ["full"] }
amqprs = "1.5.1"
async-trait = "0.1.73"

[dev-dependencies]
base64 = "0.21.5"
reqwest = "0.11.22"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_json_path = "0.6.1"


