[package]
name = "easyps"
version = "0.1.0"
edition = "2021"

[lib]
name = "easyps_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "easyps"
path = "src/bin/main.rs"


[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
easyamqp = { path = "../../easyamqp" }
tokio = { version = "1.29.1", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
