[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easyamqp = { path = "../../easyamqp" }
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1.29.1", features = ["full"] }
